Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34688

QSslSocket::setCiphers() does not allow TLSv1.2 or TLSv1.1 ciphers to be selected.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.0
    • 5.1.0 , 5.1.1, 5.2.0 Beta1
    • Network: SSL
    • None
    • 1c624d718ce7860f08b95fc4225725e85a8fe3df

    Description

      I am unable to select ciphers such as 'AES256-GCM-SHA384' or 'AES256-SHA256' as the QSslSocket::setCiphers() only accepts ciphers for SSLv2, SSLv3 and TLSv1.0.

      This is caused by the already commented '### Crude' for loop which only tests the first 3 enums values of QSsl::SslProtocol.

      https://qt.gitorious.org/qt/qtbase/source/ac7823129a529a71d2725fdeadc5eff7a2b0788a:src/network/ssl/qsslsocket.cpp#L1193

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richmoore Richard Moore (qtnetwork)
            chris5287 Chris Stylianou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes