src/network/ssl/qsslsocket.cpp
@@ -1195,12 +1195,9 @@ void QSslSocket::setCiphers(const QString &ciphers)
     Q_D(QSslSocket);
     d->configuration.ciphers.clear();
     foreach (const QString &cipherName, ciphers.split(QLatin1String(":"),QString::SkipEmptyParts)) {
-        for (int i = 0; i < 3; ++i) {
-            // ### Crude
-            QSslCipher cipher(cipherName, QSsl::SslProtocol(i));
-            if (!cipher.isNull())
-                d->configuration.ciphers << cipher;
-        }
+        QSslCipher cipher(cipherName);
+        if (!cipher.isNull())
+            d->configuration.ciphers << cipher;
     }
 }
 
